@@ -29,9 +29,8 @@ import org.overrun.glib.FunctionDescriptors;
 import org.overrun.glib.RuntimeHelper;
 import org.overrun.glib.util.value.Value2;
 
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.SegmentAllocator;
 import java.lang.invoke.MethodHandle;
 import java.util.function.BiFunction;
@@ -48,15 +47,15 @@ import java.util.function.BiFunction;
  * @author squid233
  * @since 0.1.0
  */
-public interface GLLoadFunc extends BiFunction<SegmentAllocator, String, MemoryAddress> {
+public interface GLLoadFunc extends BiFunction<SegmentAllocator, String, MemorySegment> {
     /**
      * Creates a load function with shared arena.
      *
      * @param function the function pointer getter
      * @return the load function and the arena
      */
-    static Value2<GLLoadFunc, MemorySession> ofShared(Getter function) {
-        final var arena = MemorySession.openShared();
+    static Value2<GLLoadFunc, Arena> ofShared(Getter function) {
+        final var arena = Arena.openShared();
         return new Value2<>(of(arena, function), arena);
     }
 
@@ -66,8 +65,8 @@ public interface GLLoadFunc extends BiFunction<SegmentAllocator, String, MemoryA
      * @param function the function pointer getter
      * @return the load function and the arena
      */
-    static Value2<GLLoadFunc, MemorySession> ofConfined(Getter function) {
-        final var arena = MemorySession.openConfined();
+    static Value2<GLLoadFunc, Arena> ofConfined(Getter function) {
+        final var arena = Arena.openConfined();
         return new Value2<>(of(arena, function), arena);
     }
 
@@ -83,7 +82,7 @@ public interface GLLoadFunc extends BiFunction<SegmentAllocator, String, MemoryA
     }
 
     @Override
-    default MemoryAddress apply(SegmentAllocator allocator, String s) {
+    default MemorySegment apply(SegmentAllocator allocator, String s) {
         return invoke(allocator, s);
     }
 
@@ -94,7 +93,7 @@ public interface GLLoadFunc extends BiFunction<SegmentAllocator, String, MemoryA
      * @param procName  the function name
      * @return the function address
      */
-    MemoryAddress invoke(SegmentAllocator allocator, String procName);
+    MemorySegment invoke(SegmentAllocator allocator, String procName);
 
     /**
      * Load a function by the given name and creates a downcall handle or {@code null}.
@@ -113,7 +112,7 @@ public interface GLLoadFunc extends BiFunction<SegmentAllocator, String, MemoryA
      * @since 0.1.0
      */
     @FunctionalInterface
-    interface Getter extends BiFunction<SegmentAllocator, String, MemoryAddress> {
+    interface Getter extends BiFunction<SegmentAllocator, String, MemorySegment> {
     }
 
     /**
@@ -139,7 +138,7 @@ public interface GLLoadFunc extends BiFunction<SegmentAllocator, String, MemoryA
         }
 
         @Override
-        public MemoryAddress invoke(SegmentAllocator allocator, String procName) {
+        public MemorySegment invoke(SegmentAllocator allocator, String procName) {
             return func.apply(allocator, procName);
         }
 
