@@ -24,32 +24,33 @@
 
 package org.overrun.glib.demo.opengl;
 
+import org.overrun.glib.RuntimeHelper;
 import org.overrun.glib.gl.GL;
 import org.overrun.glib.gl.GLLoader;
 import org.overrun.glib.glfw.Callbacks;
 import org.overrun.glib.glfw.GLFW;
 import org.overrun.glib.glfw.GLFWErrorCallback;
-import org.overrun.glib.util.BufferBuilder;
+import org.overrun.glib.util.GrowableBuffer;
 
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
 
 import static java.lang.foreign.ValueLayout.JAVA_BYTE;
 import static java.lang.foreign.ValueLayout.JAVA_FLOAT;
 import static org.overrun.glib.gl.GLConstC.*;
 
 /**
- * Tests {@link BufferBuilder}
+ * Tests {@link GrowableBuffer}
  *
  * @author squid233
  * @since 0.1.0
  */
-public final class BufferBuilderTest {
-    private MemoryAddress window;
+public final class GrowableBufferTest {
+    private MemorySegment window;
     private int program, vao, vbo;
 
     public void run() {
-        try (var arena = MemorySession.openShared()) {
+        try (var arena = Arena.openShared()) {
             init(arena);
             load(arena);
         }
@@ -66,7 +67,7 @@ public final class BufferBuilderTest {
         GLFW.setErrorCallback(null);
     }
 
-    private void init(MemorySession arena) {
+    private void init(Arena arena) {
         GLFWErrorCallback.createPrint().set();
         if (!GLFW.init()) {
             throw new IllegalStateException("Unable to initialize GLFW");
@@ -74,8 +75,8 @@ public final class BufferBuilderTest {
         GLFW.defaultWindowHints();
         GLFW.windowHint(GLFW.VISIBLE, false);
         GLFW.windowHint(GLFW.RESIZABLE, true);
-        window = GLFW.createWindow(arena, 300, 300, "BufferBuilder Test", MemoryAddress.NULL, MemoryAddress.NULL);
-        if (window == MemoryAddress.NULL)
+        window = GLFW.createWindow(arena, 300, 300, "GrowableBuffer Test", MemorySegment.NULL, MemorySegment.NULL);
+        if (window.address() == RuntimeHelper.NULL)
             throw new RuntimeException("Failed to create the GLFW window");
         GLFW.setKeyCallback(window, (handle, key, scancode, action, mods) -> {
             if (key == GLFW.KEY_ESCAPE && action == GLFW.RELEASE) {
@@ -84,7 +85,7 @@ public final class BufferBuilderTest {
         });
         GLFW.setFramebufferSizeCallback(window, (handle, width, height) ->
             GL.viewport(0, 0, width, height));
-        var vidMode = GLFW.getVideoMode(arena, GLFW.getPrimaryMonitor());
+        var vidMode = GLFW.getVideoMode(arena.scope(), GLFW.getPrimaryMonitor());
         if (vidMode != null) {
             var size = GLFW.getWindowSize(window);
             GLFW.setWindowPos(
@@ -100,7 +101,7 @@ public final class BufferBuilderTest {
         GLFW.showWindow(window);
     }
 
-    private void load(MemorySession arena) {
+    private void load(Arena arena) {
         if (GLLoader.loadConfined(GLFW::getProcAddress) == null)
             throw new IllegalStateException("Failed to load OpenGL");
 
@@ -150,8 +151,8 @@ public final class BufferBuilderTest {
         vbo = GL.genBuffer();
         GL.bindBuffer(GL_ARRAY_BUFFER, vbo);
         int stride;
-        try (var builder = new BufferBuilder(4 * 3 * 3 + 4 * 3)) {
-            builder.begin()
+        try (var buffer = new GrowableBuffer(4 * 3 * 3 + 4 * 3)) {
+            buffer.begin()
                 .putAll(JAVA_FLOAT, 0.0f, 0.5f, 0.0f)
                 .putAll(JAVA_BYTE, (byte) 0xff, (byte) 0, (byte) 0)
                 // For alignment reason, we put a padding byte
@@ -166,13 +167,13 @@ public final class BufferBuilderTest {
                 .put(JAVA_BYTE, (byte) 0)
                 .emit()
                 .end();
-            GL.bufferData(GL_ARRAY_BUFFER, builder, GL_STATIC_DRAW);
-            stride = (int) builder.stride();
+            GL.bufferData(GL_ARRAY_BUFFER, buffer, GL_STATIC_DRAW);
+            stride = (int) buffer.stride();
         }
         GL.enableVertexAttribArray(0);
         GL.enableVertexAttribArray(1);
-        GL.vertexAttribPointer(0, 3, GL_FLOAT, false, stride, MemoryAddress.NULL);
-        GL.vertexAttribPointer(1, 3, GL_UNSIGNED_BYTE, true, stride, MemoryAddress.ofLong(12));
+        GL.vertexAttribPointer(0, 3, GL_FLOAT, false, stride, MemorySegment.NULL);
+        GL.vertexAttribPointer(1, 3, GL_UNSIGNED_BYTE, true, stride, MemorySegment.ofAddress(12));
         GL.bindBuffer(GL_ARRAY_BUFFER, 0);
         GL.bindVertexArray(0);
     }
@@ -195,6 +196,6 @@ public final class BufferBuilderTest {
     }
 
     public static void main(String[] args) {
-        new BufferBuilderTest().run();
+        new GrowableBufferTest().run();
     }
 }
